sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:8: error: not found: value PlusPetit
      if (PlusPetit(i,min)) {min=i}
          ^